@@ -47,6 +47,8 @@ IS_32BIT=@IS_32BIT@
 WINDOWS_WORDSIZE=@WINDOWS_WORDSIZE@
 WINDOWS_WMAIN_COMPILE=@WINDOWS_WMAIN_COMPILE@
 WINDOWS_WMAIN_LINK=@WINDOWS_WMAIN_LINK@
+WINDOWS_WMAIN_XLINK_FLAGS=@WINDOWS_WMAIN_XLINK_FLAGS@
+WINDOWS_MAIN_XLINK_FLAGS=@WINDOWS_MAIN_XLINK_FLAGS@
 SHOW_FAILED_TEST_OUTPUT=@SHOW_FAILED_TEST_OUTPUT@
 # Allow environment variable to override
 QPDF_LARGE_FILE_TEST_PATH?=@QPDF_LARGE_FILE_TEST_PATH@
