@@ -67,10 +67,10 @@ define makelib
 		$(1) $(3) $(4)
 endef
 
-#                       1    2      3       4
-# Usage: $(call makebin,objs,binary,ldflags,libs)
+#                       1    2      3       4    5
+# Usage: $(call makebin,objs,binary,ldflags,libs,xlinkflags)
 define makebin
-	$(CXX) $(CXXFLAGS) $(1) -o $(2) $(3) $(4)
+	$(CXX) $(CXXFLAGS) $(5) $(1) -o $(2) $(3) $(4)
 endef
 
 # Install target
